# Pointspire

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: Application.hpp  BunnyLoader.hpp  Camera.hpp  PointCloud.hpp  Scene.hpp
shaders/: CMakeLists.txt
shaders/glsl/: 1_morton.comp  2_bitonic_sort.comp  3_reorder.comp  4_mark_heads.comp  5_scatter.comp  6_init_leaves.comp  7_build_internal.comp  bunny_primitive.vert  cube.vert  cull.comp  skybox.frag  skybox.vert
src/: Application.cpp  BunnyLoader.cpp  Camera.cpp  PointCloud.cpp  Scene.cpp
